Version: 0.0.10
Date: 2022-01-31
  Fixes:
    - Fix default setting for refractory recipes.
      WARNING: If you use these recipes, update your refractory recipes setting before
      saving your game.
    - Fix some refractory recipes when used without certain mods
    - Fix some refractory recipe product amounts
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2022-01-25
  Changes:
    - Add deadlock stacking recipe for coke
    - Add entity-description strings (due to minor issue with SE)
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2022-01-08
  Changes:
    - New icon
  Fixes:
    - K2 issue with nil ingredients
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2022-01-02
  Fixes:
    - Fix issue with more efficient founding recipes
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2022-01-01
  Features:
    - Graphite compatibility - crucible
    - New option to enable more efficient founding of plates using refractory materials
  Fixes:
    - Steel time adjustment fix
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2021-08-20
  Changes:
    - Minor refactor
    - Fix production deadlock with bio industries + silicon
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2021-07-21
  Changes:
    - Both foundry items are more expensive
    - Both foundry entities use more energy: burner doubled, electric quadrupled
  Features:
    - Setting to enable other "assembling machine" entities to do foundry tasks.
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2021-07-19